--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   "scripts": {
     "format": "prettier --check \"src\"",
     "lint": "eslint --fix \"src\"",
+    "build": "babel src -d lib",
     "release": "standard-version"
   },
   "dependencies": {},
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-react": "^7.10.1",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "husky": "^4.2.5",
