--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "skeleton",
     "mkit"
   ],
+  "main": "dist/js-template.js",
   "scripts": {
     "format": "prettier --check \"src\"",
     "lint": "eslint --fix \"src\"",
-    "build": "babel src -d lib",
+    "build": "webpack",
     "release": "standard-version"
   },
   "dependencies": {},
@@ -22,9 +23,14 @@
     "@babel/preset-react": "^7.10.1",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "babel-loader": "^8.1.0",
     "husky": "^4.2.5",
     "prettier": "^2.0.5",
-    "standard-version": "^8.0.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "standard-version": "^8.0.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "author": "MK IT Ltd. <hi@mkit.io>",
   "homepage": "https://github.com/MK-IT/js-starter",
