fix(webpack): use `package.json` name property in Webpack

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "skeleton",
     "mkit"
   ],
-  "main": "dist/js-template.js",
+  "main": "dist/js-starter.js",
   "scripts": {
     "format": "prettier --check \"src\"",
     "lint": "eslint --fix \"src\"",
