feature(setup): add `clsx` as class resolution lib
This commit resolves two issues.
- Fix incorrect `package.json#main` value to include `.bundle` and include `files` definition to get a minimal package bundle.
- Add `clsx` as more performant than `classnames` lib and use it on the demo button component.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,12 @@
 // Place your settings in this file to overwrite default and user settings.
 {
   // Code spellcheck to ignore project-specific words
-  "cSpell.words": ["mkit", "commitlint", "roadmap"],
+  "cSpell.words": [
+    "clsx",
+    "commitlint",
+    "mkit",
+    "roadmap"
+  ],
 
   // Fix all auto-fixable issues reported by ESLint
   "editor.codeActionsOnSave": {
