fix(webpack): exclude bundle analyzer HTML report from package files

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "main": "dist/js-starter.bundle.js",
   "files": [
-    "dist"
+    "dist",
+    "!dist/js-starter.webpack-bundle-analyzer.html"
   ],
   "scripts": {
     "format": "prettier --check \"src\"",
