--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@babel/preset-react": "^7.10.1",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
@@ -37,6 +39,9 @@
     "react-dom": "^16.13.1",
     "standard-version": "^8.0.0",
     "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.5",
+    "typed-css-modules-webpack-plugin": "^0.1.3",
+    "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
