--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
   // Code spellcheck to ignore project-specific words
-  "cSpell.words": [
-    "clsx",
-    "commitlint",
-    "mkit",
-    "roadmap"
-  ],
+  "cSpell.words": ["clsx", "commitlint", "mkit", "roadmap"],
 
   // Fix all auto-fixable issues reported by ESLint
   "editor.codeActionsOnSave": {
