--- a/package.json
+++ b/package.json
@@ -23,14 +23,10 @@
     "clsx": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/preset-react": "^7.10.1",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
-    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.5.3",
     "husky": "^4.2.5",
@@ -48,9 +44,9 @@
     "webpack-node-externals": "^1.7.2"
   },
   "peerDependencies": {
+    "clsx": "^1.1.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "clsx": "^1.1.1"
+    "react-dom": "^16.13.1"
   },
   "author": "MK IT Ltd. <hi@mkit.io>",
   "homepage": "https://github.com/MK-IT/js-starter",
